--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="navbar">
-        <button class="btnRndm">Random</button>
+        <button class="btnRndm">Check Gen</button>
         <button class="btn">Reset</button>
+        <button class="btnStp">Step</button>
+        
         <input type="number" value="5" class="size" min="1" max="200">
         
     </div>
