--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button class="btnRndm">Check Gen</button>
         <button class="btn">Reset</button>
         <button class="btnStp">Step</button>
+        <div class="stepcount"><steps>$$$</steps></div>
         <input type="number" value="5" class="size" min="1" max="200">
         
     </div>
