--- a/index.html
+++ b/index.html
@@ -49,12 +49,15 @@
 </section></center>
 <center>
     <div class="navbar">
-        <button class="btnRndm">Check Gen</button>
-        <button class="btn">Reset</button>
+        <input type="range" min="1" value="15" class="speed" max="30" step="1">
+        <button class="btnStart">Start</button>
+        <button class="btnRndm">Random</button>
+        <button class="btn">Clean</button>
         <button class="btnStp">Step</button>
-        <div class="stepcount"><steps>$$$</steps></div>
-        <input type="range" min="1" value="5" class="size" max="100" step="1">
+        <div class="stepcount"><steps>0</steps></div>
+        <input type="range" min="1" value="10" class="size" max="100" step="1">
         <div class="sizecount"><sizes>$$$</sizes></div>
+        <button class="btnReload">Refresh</button>
         
     </div>
 
