--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 </section></center>
 <center>
     <div class="navbar">
-        <input type="range" min="1" value="5" class="speed" max="12" step="1">
         <button class="btnStart">Start</button>
-        <button class="btnRndm">Random</button>
-        <button class="btn">Clear</button>
         <button class="btnStp">Step</button>
+        <button class="btnRndm">Random</button>
+        <input type="range" min="1" value="6" class="speed" max="16" step="1">
         <div class="stepcount"><steps>0</steps></div>
-        <input type="range" min="1" value="40" class="size" max="100" step="1">
-        <div class="sizecount"><sizes>$$$</sizes></div>
+        <button class="btn">Clear</button>
+        <div class="sizecount"><sizes>Boom!</sizes></div>
+        <input type="range" min="1" value="40" class="size" max="120" step="1">
         <button class="btnReload">Refresh</button>
         
     </div>
