Tip List updated

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <footer>
         
                 <ul>
+                    <li>Click or touch a pixel space to place or kill a living cell.</li>
                     <li>Remember, you can play with any combinations of controls. Try adding some cells when the game is running!</li>
                     <li>Try drawing the glider to see what happens!.</li>
                     <li>Are you on a mobile device and want a better user experience? Use safari!.</li>
